# botox

./: README.md  botox.cabal  config.yaml
app/: Main.hs
src/: BoTox.hs
src/BoTox/: Bots.hs  Callbacks.hs  Commands.hs  Types.hs  Utils.hs
src/BoTox/Bots/: EchoBot.hs  GroupBot.hs  RollBot.hs  TitleBot.hs  Utils.hs
src/BoTox/Utils/: DiceParser.hs
src/Data/BoTox/: Config.hs
