name:                botox
version:             0.0.0.1
synopsis:            Tox bot written in haskell.
description:         Please see README.md
homepage:            http://github.com/gordon-quad/botox
license:             AGPL
license-file:        LICENSE
author:              Gordon Quad
maintainer:          gordon@niflheim.info
copyright:           2017, Gordon Quad
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BoTox
  GHC-Options:         -Wall

  other-modules:       BoTox.Types
                     , BoTox.Callbacks
                     , BoTox.Commands
                     , BoTox.Utils.DiceParser
                     , BoTox.Bots
                     , BoTox.Bots.Utils
                     , BoTox.Bots.GroupBot
                     , BoTox.Bots.RollBot
                     , BoTox.Bots.TitleBot
                     , Data.BoTox.Config


  build-depends:       base >= 4.7 && < 5
                     , auto >= 0.4 && < 0.6
                     , toxcore
                     , bytestring >= 0.10 && < 0.12
                     , containers >= 0.5 && < 0.6
                     , lens >= 4.13 && < 4.16
                     , time >= 1.5 && < 1.7
                     , http-client >= 0.4 && < 0.6
                     , base16-bytestring
                     , transformers
                     , text
                     , tagsoup
                     , unix
                     , wreq
                     , mtl
                     , lens
                     , MissingH
                     , random
                     , parsec

  default-language:    Haskell2010

executable botox
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , botox
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gordon-quad/botox
